--- a/azure-pipelines/jobs/steps/build_webapp_experimental.yml
+++ b/azure-pipelines/jobs/steps/build_webapp_experimental.yml
@@ -54,7 +54,7 @@ steps:
 
   - task: ArchiveFiles@2
     displayName: 'Archive files'
-    condition: and(contains(variables['build.sourceBranch'], 'refs/heads/stable'), succeeded())
+    condition: and(eq(variables.isProduction, 'true'), succeeded())
     inputs:
       rootFolderOrFile: '$(projectRoot)'
       includeRootFolder: false
@@ -64,7 +64,7 @@ steps:
 
   - task: PublishBuildArtifacts@1
     displayName: Publish Build Artifact
-    condition: and(contains(variables['build.sourceBranch'], 'refs/heads/stable'), succeeded())
+    condition: and(eq(variables.isProduction, 'true'), succeeded())
     inputs:
       PathtoPublish: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
       ArtifactName: 'drop'
