--- a/azure-pipelines/jobs/steps/build_webapp.yml
+++ b/azure-pipelines/jobs/steps/build_webapp.yml
@@ -24,7 +24,7 @@ steps:
   - ${{ if eq( parameters.publishBuildArtifact, 'true') }}:
       - task: ArchiveFiles@2
         displayName: 'Archive files'
-        condition: and(contains(variables['build.sourceBranch'], 'refs/heads/stable'), succeeded())
+        condition: and(eq(variables.isProduction, 'true'), succeeded())
         inputs:
           rootFolderOrFile: '$(projectRoot)'
           includeRootFolder: false
@@ -34,7 +34,7 @@ steps:
 
       - task: PublishBuildArtifacts@1
         displayName: Publish Build Artifact
-        condition: and(contains(variables['build.sourceBranch'], 'refs/heads/stable'), succeeded())
+        condition: and(eq(variables.isProduction, 'true'), succeeded())
         inputs:
           PathtoPublish: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
           ArtifactName: 'drop'
