--- a/azure-pipelines/publish_docs.yml
+++ b/azure-pipelines/publish_docs.yml
@@ -21,7 +21,7 @@ steps:
 
   - task: Bash@3
     displayName: 'Deploy to GitHub-Pages'
-    condition: and(contains(variables['build.sourceBranch'], 'refs/heads/stable'), succeeded())
+    condition: and(eq(variables.isProduction, 'true'), succeeded())
     inputs:
       targetType: 'inline'
       script: 'mkdocs gh-deploy --force --clean'
