--- a/azure-pipelines/jobs/steps/deploy_bicep.yml
+++ b/azure-pipelines/jobs/steps/deploy_bicep.yml
@@ -3,10 +3,9 @@ steps:
     name: DeployBicepFile
     displayName: Deploy Bicep file
     inputs:
-      azureSubscription: '$(azureSubscription)'
-      scriptType: 'bash'
-      scriptLocation: 'inlineScript'
-      workingDirectory: $(Build.SourcesDirectory)
+      azureSubscription: $(azureSubscription)
+      scriptType: bash
+      scriptLocation: inlineScript
       inlineScript: |
         az deployment group create \
           --name $(Build.BuildNumber) \
