--- a/azure-pipelines/jobs/steps/build_mkdocs.yml
+++ b/azure-pipelines/jobs/steps/build_mkdocs.yml
@@ -5,18 +5,8 @@ parameters:
   - name: PYTHON_VERSION
     type: string
     default: '3.9'
-  # will update Submodule of mkdocs-material if not set to false
-  - name: update_submodule
-    type: boolean
-    default: true
 
 steps:
-  # update MkDocs-Material Submodule if not set to false
-  - ${{ if eq(parameters.update_submodule, true) }}:
-      - template: checkout_submodules.yml
-        parameters:
-          submodule: mkdocs-material
-
   - task: UsePythonVersion@0
     displayName: 'Use Python ${{ parameters.PYTHON_VERSION }}'
     inputs:
@@ -28,10 +18,12 @@ steps:
     displayName: 'Install mkdocs-material'
     inputs:
       targetType: 'inline'
-      script: 'pip install -e mkdocs-material mkdocs-git-revision-date-plugin'
+      script: |
+        pip install -e mkdocs-material
+        pip install mkdocs-git-revision-date-plugin
 
   - task: Bash@3
-    displayName: 'Build docs'
+    displayName: 'Build MkDocs'
     inputs:
       targetType: 'inline'
       script: 'mkdocs build'
