--- a/azure-pipelines/jobs/steps/deploy_bicep.yml
+++ b/azure-pipelines/jobs/steps/deploy_bicep.yml
@@ -1,4 +1,9 @@
 steps:
+  - checkout: self
+    submodules: no
+    persistCredentials: true
+    displayName: Checkout self
+
   - task: AzureCLI@2
     name: DeployBicepFile
     displayName: Deploy Bicep file
