--- a/azure-pipelines/jobs/steps/deploy_webapp.yml
+++ b/azure-pipelines/jobs/steps/deploy_webapp.yml
@@ -1,10 +1,12 @@
 steps:
-  - template: python_django_export_projectroot.yml
+
 
   - task: UsePythonVersion@0
-    displayName: 'Use Python ${{ parameters.PYTHON_VERSION }}'
+    displayName: 'Use Python $(pythonVersion)'
     inputs:
-      versionSpec: ${{ parameters.PYTHON_VERSION }}
+      versionSpec: $(pythonVersion))
+
+  # - template: python_django_export_projectroot.yml
 
   - task: PythonScript@0
     displayName: Export project path
@@ -42,7 +44,7 @@ steps:
     name: downloadPipelineArtifact
     inputs:
       artifactName: WebApp
-      path: $(projectRoot)
+      path: $(Build.ArtifactStagingDirectory)/$(Build.BuildId)/WebApp
 
   - task: AzureWebApp@1
     displayName: Deploy Azure Web App
@@ -50,6 +52,6 @@ steps:
       azureSubscription: $(azureSubscription)
       appType: webAppLinux
       appName: $(webAppName)
-      package: $(projectRoot)/WebApp
+      package: $(Build.ArtifactStagingDirectory)/$(Build.BuildId)/WebApp
       runtimeStack: PYTHON|3.9
       startUpCommand: python3.9 manage.py migrate
