--- a/azure-pipelines/jobs/steps/deploy_webapp.yml
+++ b/azure-pipelines/jobs/steps/deploy_webapp.yml
@@ -1,28 +1,11 @@
 steps:
-
-
   - task: UsePythonVersion@0
     displayName: 'Use Python $(pythonVersion)'
     inputs:
       versionSpec: $(pythonVersion))
-
+      architecture: x64
+      addToPath: true
   # - template: python_django_export_projectroot.yml
-
-  - task: PythonScript@0
-    displayName: Export project path
-    inputs:
-      scriptSource: inline
-      script: |
-        """Search all subdirectories for `manage.py`."""
-        from glob import iglob
-        from os import path
-        # Python >= 3.5
-        manage_py = next(iglob(path.join('**', 'manage.py'), recursive=True), None)
-        if not manage_py:
-            raise SystemExit('Could not find a Django project')
-        project_location = path.dirname(path.abspath(manage_py))
-        print('Found Django project in', project_location)
-        print('##vso[task.setvariable variable=projectRoot]{}'.format(project_location))
 
   - task: AzurePowerShell@5
     name: readWebAppName
