--- a/azure-pipelines/jobs/steps/deploy_webapp.yml
+++ b/azure-pipelines/jobs/steps/deploy_webapp.yml
@@ -1,10 +1,11 @@
 steps:
-  - template: python_django_export_projectroot.yml
-
   - task: UsePythonVersion@0
+    displayName: 'Use Python $(pythonVersion)'
     inputs:
-      versionSpec: ${{ variables.pythonVersion }}
-    displayName: Use Python ${{ variables.pythonVersion }}
+      versionSpec: $(pythonVersion)
+      architecture: x64
+      addToPath: true
+  # - template: python_django_export_projectroot.yml
 
   - task: AzurePowerShell@5
     name: readWebAppName
@@ -20,12 +21,20 @@ steps:
       azurePowerShellVersion: LatestVersion
       pwsh: true
 
+  # Download an artifact named 'WebApp' to 'bin' in $(Build.SourcesDirectory)
+  - task: DownloadPipelineArtifact@2
+    displayName: Download Pipeline Artifact
+    name: downloadPipelineArtifact
+    inputs:
+      artifactName: WebApp
+      path: $(Build.ArtifactStagingDirectory)/$(Build.BuildId)/WebApp
+
   - task: AzureWebApp@1
     displayName: Deploy Azure Web App
     inputs:
       azureSubscription: $(azureSubscription)
       appType: webAppLinux
       appName: $(webAppName)
-      package: $(Pipeline.Workspace)/drop/$(Build.BuildId).zip
+      package: $(Build.ArtifactStagingDirectory)/$(Build.BuildId)/WebApp
       runtimeStack: PYTHON|3.9
       startUpCommand: python3.9 manage.py migrate
