--- a/azure-pipelines/jobs/steps/build_webapp.yml
+++ b/azure-pipelines/jobs/steps/build_webapp.yml
@@ -1,5 +1,6 @@
 parameters:
   - name: PYTHON_VERSION
+    type: string
     default: '3.9'
   - name: publishBuildArtifact
     type: boolean
@@ -11,6 +12,7 @@ steps:
     inputs:
       versionSpec: ${{ parameters.PYTHON_VERSION }}
       addToPath: true
+      architecture: 'x64'
 
   - script: |
       python -m venv antenv
@@ -21,21 +23,29 @@ steps:
     workingDirectory: $(projectRoot)
     displayName: 'Install Requirements'
 
-  - ${{ if eq( parameters.publishBuildArtifact, 'true') }}:
-      - task: ArchiveFiles@2
-        displayName: 'Archive files'
-        condition: and(eq(variables.isProduction, 'true'), succeeded())
-        inputs:
-          rootFolderOrFile: '$(projectRoot)'
-          includeRootFolder: false
-          archiveType: zip
-          archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
-          replaceExistingArchive: true
 
-      - task: PublishBuildArtifacts@1
-        displayName: Publish Build Artifact
-        condition: and(eq(variables.isProduction, 'true'), succeeded())
-        inputs:
-          PathtoPublish: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
-          ArtifactName: 'drop'
-          publishLocation: 'Container'
+  # - ${{ if eq( parameters.publishBuildArtifact, 'true') }}:
+  # - task: ArchiveFiles@2
+  #   displayName: 'Archive files'
+  #   # condition: and(eq(variables.isProduction, 'true'), succeeded())
+  #   inputs:
+  #     rootFolderOrFile: $(projectRoot)
+  #     includeRootFolder: false
+  #     archiveType: zip
+  #     archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
+  #     replaceExistingArchive: true
+
+  - task: PublishPipelineArtifact@1
+    # condition: and(eq(variables.isProduction, 'true'), succeeded())
+    inputs:
+      targetPath: $(projectRoot)
+      # targetPath: $(System.DefaultWorkingDirectory)/bin/WebApp
+      artifactName: WebApp
+
+      # - task: PublishBuildArtifacts@1
+      #   displayName: Publish Build Artifact
+      #   condition: and(eq(variables.isProduction, 'true'), succeeded())
+      #   inputs:
+      #     PathtoPublish: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+      #     ArtifactName: 'drop'
+      #     publishLocation: 'Container'
