--- a/azure-pipelines/jobs/steps/python_django_test.yml
+++ b/azure-pipelines/jobs/steps/python_django_test.yml
@@ -7,7 +7,7 @@ parameters:
   - name: PYTHON_VERSIONS
     type: object
     default:
-      - '3.9'
+      - '3.8'
 
 steps:
   - ${{ each PYTHON_VERSION in parameters.PYTHON_VERSIONS }}:
@@ -38,6 +38,7 @@ steps:
           pip install -r requirements.txt
           pip install unittest-xml-reporting
         displayName: 'Install prerequisites'
+        name: installPrereqs
         workingDirectory: $(projectRoot)
 
       - script: |
