--- a/azure-pipelines/jobs/steps/build_webapp.yml
+++ b/azure-pipelines/jobs/steps/build_webapp.yml
@@ -23,29 +23,9 @@ steps:
     workingDirectory: $(projectRoot)
     displayName: 'Install Requirements'
 
-
-  # - ${{ if eq( parameters.publishBuildArtifact, 'true') }}:
-  # - task: ArchiveFiles@2
-  #   displayName: 'Archive files'
-  #   # condition: and(eq(variables.isProduction, 'true'), succeeded())
-  #   inputs:
-  #     rootFolderOrFile: $(projectRoot)
-  #     includeRootFolder: false
-  #     archiveType: zip
-  #     archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
-  #     replaceExistingArchive: true
-
   - task: PublishPipelineArtifact@1
-    # condition: and(eq(variables.isProduction, 'true'), succeeded())
+    condition: and(eq(variables.isProduction, 'true'),eq(variables.isPullRequest, 'false') succeeded())
     inputs:
       targetPath: $(projectRoot)
       # targetPath: $(System.DefaultWorkingDirectory)/bin/WebApp
       artifactName: WebApp
-
-      # - task: PublishBuildArtifacts@1
-      #   displayName: Publish Build Artifact
-      #   condition: and(eq(variables.isProduction, 'true'), succeeded())
-      #   inputs:
-      #     PathtoPublish: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
-      #     ArtifactName: 'drop'
-      #     publishLocation: 'Container'
