--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -93,7 +93,7 @@ stages:
 
       - deployment: DeployDjango
         dependsOn: BuildWebApp
-        condition: and(succeeded(), eq(variables.isProduction, 'True'))
+        condition: eq(variables.isProduction, 'True')
         displayName: Deploy Django to WebApp
         environment: $(environmentName)
         strategy:
@@ -117,7 +117,7 @@ stages:
 
           - task: Bash@3
             displayName: Deploy to GitHub-Pages
-            condition: and(eq(variables.isMain, 'True'), succeeded())
+            condition: eq(variables.isProduction, 'True')
             inputs:
               targetType: 'inline'
               script: 'mkdocs gh-deploy --force --clean'
