--- a/azure-pipelines/jobs/steps/build_webapp.yml
+++ b/azure-pipelines/jobs/steps/build_webapp.yml
@@ -1,10 +1,10 @@
 parameters:
   - name: PYTHON_VERSION
     type: string
-    default: '3.9'
+    default: $(pythonVersion)
   - name: publishBuildArtifact
     type: boolean
-    default: false
+    default: False
 
 steps:
   - task: UsePythonVersion@0
@@ -17,14 +17,14 @@ steps:
   - script: |
       python -m venv antenv
       source antenv/bin/activate
-      python -m pip install --upgrade pip
+      python -m pip install --upgrade pip wheel setuptools
       pip install setup
       pip install -r requirements.txt
     workingDirectory: $(projectRoot)
     displayName: 'Install Requirements'
 
   - task: PublishPipelineArtifact@1
-    condition: and(eq(variables.isProduction, 'true'),eq(variables.isPullRequest, 'false'), succeeded())
+    condition: or(eq(variables.isProduction, 'True'), eq(parameters.publishBuildArtifact, 'True'))
     inputs:
       targetPath: $(projectRoot)
       # targetPath: $(System.DefaultWorkingDirectory)/bin/WebApp
