Use pipeline Variables as default Parameters

--- a/azure-pipelines/jobs/steps/build_mkdocs.yml
+++ b/azure-pipelines/jobs/steps/build_mkdocs.yml
@@ -4,7 +4,7 @@ parameters:
   # Python Version to use for building mkdocs-material
   - name: PYTHON_VERSION
     type: string
-    default: '3.9'
+    default: $(pythonVersion)
 
 steps:
   - task: UsePythonVersion@0
