--- a/azure-pipelines/jobs/steps/python_django_export_projectroot.yml
+++ b/azure-pipelines/jobs/steps/python_django_export_projectroot.yml
@@ -3,7 +3,7 @@
 parameters:
   - name: PYTHON_VERSION
     type: string
-    default: '3.9'
+    default: $(pythonVersion)
 
 steps:
   - template: checkout_submodules.yml
