--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -82,14 +82,14 @@ stages:
           - template: azure-pipelines/jobs/steps/python_django_export_projectroot.yml
 
           - template: azure-pipelines/jobs/steps/get_appinsights_con_str.yml
-            parameters:
-              azureSubscription: $(azureSubscription)
-              resourceGroupName: $(resourceGroupName)
+            # parameters:
+            #   azureSubscription: $(azureSubscription)
+            #   resourceGroupName: $(resourceGroupName)
 
           - template: azure-pipelines/jobs/steps/build_webapp.yml
-            parameters:
-              PYTHON_VERSION: $(pythonVersion)
-              publishBuildArtifact: true
+            # parameters:
+            #   PYTHON_VERSION: $(pythonVersion)
+            #   publishBuildArtifact: true
 
       - deployment: DeployDjango
         dependsOn: BuildWebApp
